app/assets/stylesheets/util.css.scss
html, body {
  height: 100%;
}

body {
  background-color: #8b99ab;
}

.top-links {
  margin-bottom: 10px;
}

input.placeholder, textarea.placeholder {
  color: #aaa;
}

#alert_messages {
  text-align: center;
}

#notification_container {
  text-align: center;
  z-index: 99999;
  position: fixed;
  top: 0;

  width: 100%;
  margin-left: -20px;
  @media (min-width: 1200px) {
    left: 50%;
    margin-left: -585px;
    width: 1170px;
  }
  @media (min-width: 980px) and (max-width: 1199px) {
    left: 50%;
    margin-left: -470px;
    width: 940px;
  }
  @media (min-width: 768px) and (max-width: 979px) {
    left: 50%;
    margin-left: -362px;
    width: 724px;
  }

  #notification {
    font-weight: bold;
  }
}

#wrap {
  min-height: 100%;
}

#main {
  overflow: auto;
  padding-top: 10px;
	padding-bottom: 50px;
}

#footer {
  position: relative;
  margin-top: -50px;
  height: 50px;
  clear: both;
  text-align: center;
  color: #eee;
  font-size: 12px;

  a {
    color: #eee;
    text-decoration: underline;
  }
  p {
    margin: 0;
    padding: 0;
  }
}

